-
Bug
-
Resolution: Done
-
P2: Important
-
5.8.0
-
Debian Stretch
-
c0157a9f035a27a3ba20cab0ca3ca1c6e78f0b14
Hi,
I have http_proxy set to http://192.1.1.5:3128
- Under Qt5.8.0
FortuneServer fails with error-box "The proxy type is invalid for this operation" in this line
- Under Qt5.7.1
FortuneServer works perfectly.
To make it work under Qt5.8.0, I have to insert the following, below line 152 with
tcpServer = new QTcpServer(this);
tcpServer->setProxy(QNetworkProxy::NoProxy); // new line inserted!
This issue is perhaps similar to QTBUG-58374 and
possibly related to QTBUG-41053
- duplicates
-
QTBUG-41053 http_proxy is not a good default if no specific protocol proxy was found
-
- Closed
-
- is duplicated by
-
QTBUG-60298 QTcpServer fails to listen when system has a http proxy configured
-
- Closed
-
-
QTBUG-60975 QTcpSocket and proxy server configured in windows
-
- Closed
-
-
QTBUG-59505 [REG 5.7.0 -> 5.8.0] QUdpSocket bind fails
-
- Closed
-
-
QTBUG-58374 QUdpSocket::bind() failure in case http_proxy environment variable is set (The proxy type is invalid for this operation)
-
- Closed
-
-
QTBUG-59142 QTcpSocket waitForConnected fails with ConnectionRefusedError on localhost
-
- Closed
-
| For Gerrit Dashboard: QTBUG-58706 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 186124,7 | QNativeSocketEngine - set query type in checkProxy | 5.9 | qt/qtbase | Status: MERGED | +2 | 0 |